Wenig Einrückung harmonisiert.

--- a/skript.tex
+++ b/skript.tex
@@ -90,33 +90,34 @@
 \end{defn}
 
 \begin{defn}
-	Eine \underline{Gruppe} ist eine Menge $G\neq \emptyset$ zusammen mit einer Verknüpfung $\cdot$, sodass Assoziativität (A), Existenz eines neutralen Elements (N) und Existenz inverser Elemente (I) erfüllt sind. $G$ ist \underline{abelsch}, falls Kommutativität (K) gilt.
+	Eine \underline{Gruppe} ist eine Menge $G\neq \emptyset$ zusammen mit einer Verknüpfung $\cdot$, sodass Assoziativität (A), Existenz eines neutralen Elements (N) und Existenz inverser Elemente (I) erfüllt sind.
+	$G$ ist \underline{abelsch}, falls Kommutativität (K) gilt.
 \end{defn}
 
 \begin{ex}
 	\begin{enumerate}
-		\item $\mathbb{Z}, \mathbb{Q}, \mathbb{R}, \mathbb{C}$ sind abelsche Gruppen mit $+$ als Verknüpfung.
-		\item $\mathbb{Q}^*=\mathbb{Q}\setminus \{0\}, \mathbb{R}^*, \mathbb{C}^*$ mit Multiplikation sind abelsche Gruppen.
-		\item Für eine Menge $M$ ist $\sym(M)$ ist eine Gruppe, aber für $|M| > 2$ nicht abelsch.
+	\item $\mathbb{Z}, \mathbb{Q}, \mathbb{R}, \mathbb{C}$ sind abelsche Gruppen mit $+$ als Verknüpfung.
+	\item $\mathbb{Q}^*=\mathbb{Q}\setminus \{0\}, \mathbb{R}^*, \mathbb{C}^*$ mit Multiplikation sind abelsche Gruppen.
+	\item Für eine Menge $M$ ist $\sym(M)$ ist eine Gruppe, aber für $|M| > 2$ nicht abelsch.
 	\end{enumerate}
 \end{ex}
 
 \begin{lemma}
 	\begin{enumerate}[label=\alph*)]
-		\item Das neutrale Element ist eindeutig.
-		\item Inverse Elemente sind eindeutig.
+	\item Das neutrale Element ist eindeutig.
+	\item Inverse Elemente sind eindeutig.
 	\end{enumerate}
 \end{lemma}
 
 \begin{proof}
 	\begin{enumerate}[label=\alph*)]
-		\item Seien $e,f$ neutrale Elemente, dann gilt $e=ef=f$.
-		\item Sei $a\in G$ und $b,b'\in G$ inverse Elemente. Dann gilt $b'=b'e=b'(ab)=(b'a)b=eb=b$.
+	\item Seien $e,f$ neutrale Elemente, dann gilt $e=ef=f$.
+	\item Sei $a\in G$ und $b,b'\in G$ inverse Elemente. Dann gilt $b'=b'e=b'(ab)=(b'a)b=eb=b$.
 	\end{enumerate}
 \end{proof}
 
 \begin{notation}
-	multiplikativ: $a\cdot b$ oder $ab$, neutrales Element $e$ oder $1$, inverses Element von $a\in G$ ist $\Inv a$.
+	Multiplikativ: $a\cdot b$ oder $ab$, neutrales Element $e$ oder $1$, inverses Element von $a\in G$ ist $\Inv a$.
 \end{notation}
 
 \begin{lemma}
